crates/filecommand-tui/tests/snapshots/snapshot_views__editor_header_position_and_modified.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: header
---
 Edit: C:\big.txt *           Line 12/441   Col 8                         3,853
