crates/filecommand-tui/tests/snapshots/snapshot_views__editor_keybar.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: last
---
1Help 2Save 3Mark 4Replac 5 6 7Search 8 9 10Quit
