crates/filecommand-tui/tests/snapshots/snapshot_views__editor_marked_selection.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
 Edit: f.txt                    Line 2/5   Col 1                             23 
alpha                                                                           
beta                                                                            
gamma                                                                           
delta                                                                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
1Help 2Save 3Mark 4Replac 5 6 7Search 8 9 10Quit
