crates/filecommand-tui/tests/snapshots/snapshot_views__editor_save_on_exit_confirm.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
assertion_line: 570
expression: text
---
 Edit: C:\notes.txt *                                      Line 1/2   Col 2   5 
!abc                                                                            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                      ┌──────────────────────────────────┐                      
                      │ Save changes to notes.txt? (Y/N) │                      
                      └──────────────────────────────────┘                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
1Help 2Save 3Mark 4Replac 5 6 7Search 8 9 10Quit
