crates/filecommand-tui/tests/snapshots/snapshot_views__fkey_bar_last_row_inverted.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: last_line
---
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
